<resources>
    <string name="app_name">AndroidFinal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="hello_blank_fragment">BLANK FRAGMENT</string>


    // Custom Strings

    // Common

    <string name="nav_title">Money Cents</string>
    <string name="nav_subtitle">Make Money Make Sense</string>

    <string name="nav_home">Home</string>
    <string name="nav_billing">Banking Contacts</string>
    <string name="nav_savings">Savings Tracker</string>
    <string name="nav_budget">Budget Tracker</string>
    <string name="nav_credits">Credits</string>
    <string name="nav_transaction">Transactions</string>
    <string name="nav_conversion">Currency Converter</string>
    <string name="nav_contact_us">Contact Us</string>

    <string name="newText">New</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="submit">Submit</string>

    // Savings Tracker

    <string name="savingsTrackerText">Savings Amount:</string>


    // Spinner List

    <string-array name="currencies">
        <item>USD</item>
        <item>CAD</item>
        <item>MXN</item>
        <item>GBP</item>
        <item>AUD</item>
        <item>EUR</item>
    </string-array>

    // Credits

    <string name="credits">Programmed by</string>
    <string name="credits1">All images created by</string>
    <string name="name">Amanda Gayer</string>


    <string name="credits2">Share our app with a friend!</string>
    <string name="credits3">Question or Concern about the app? Email us!</string>
    <string name="credits4">Check out a list of ALL exchange rates</string>
    <string name="title_activity_settings">SettingsActivity</string>


    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>


</resources>