<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/nav_home" />

        <item
            android:id="@+id/nav_budget"
            android:icon="@drawable/ic_baseline_calculate_24"
            android:title="@string/nav_budget" />

        <item
            android:id="@+id/nav_savings"
            android:icon="@drawable/ic_baseline_attach_money_24"
            android:title="@string/nav_savings" />

        <item
            android:id="@+id/nav_transactions"
            android:icon="@drawable/ic_baseline_credit_card_24"
            android:title="@string/nav_transaction" />

        <item
            android:id="@+id/nav_conversion"
            android:icon="@drawable/ic_baseline_import_export_24"
            android:title="@string/nav_conversion" />

        <item
            android:id="@+id/nav_billing"
            android:icon="@drawable/ic_baseline_call_24"
            android:title="@string/nav_billing" />

        <item
            android:id="@+id/nav_credits"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/nav_credits" />
    </group>
</menu>