<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light"
    android:orientation="vertical"
    tools:context=".Fragments.HomeFragment">


    <ImageView
        android:id="@+id/titleImage"
        android:layout_width="wrap_content"
        android:layout_height="268dp"
        android:layout_gravity="center"
        android:adjustViewBounds="true"
        android:contentDescription="TODO"
        app:srcCompat="@drawable/logo3"
        tools:src="@drawable/logo3" />

    <Button
        android:id="@+id/budgetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/primaryLight"
        android:text="@string/nav_budget"
        android:textColor="@color/dark"
        android:textSize="25sp"
        app:cornerRadius="15dp" />

    <Button
        android:id="@+id/savingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:backgroundTint="@color/primaryLight"
        android:layout_margin="20dp"
        android:textColor="@color/dark"
        android:layout_gravity="center"
        android:text="@string/nav_savings"
        app:cornerRadius="15dp" />

    <Button
        android:id="@+id/transactionsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:backgroundTint="@color/primaryLight"
        android:layout_margin="20dp"
        android:textColor="@color/dark"
        android:layout_gravity="center"
        android:text="@string/nav_transaction"
        app:cornerRadius="15dp" />

    <Button
        android:id="@+id/conversionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:backgroundTint="@color/primaryLight"
        android:layout_margin="20dp"
        android:textColor="@color/dark"
        android:layout_gravity="center"
        android:text="@string/nav_conversion"
        app:cornerRadius="15dp" />

    <Button
        android:id="@+id/billingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:backgroundTint="@color/primaryLight"
        android:layout_margin="20dp"
        android:textColor="@color/dark"
        android:layout_gravity="center"
        android:text="@string/nav_billing"
        app:cornerRadius="15dp" />

</LinearLayout>