<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/light"
    tools:context=".Fragments.CreditsFragment">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/textview_border"
        android:padding="10dp"
        android:text="Credits"
        android:textColor="@color/dark"
        android:textSize="35sp"
        android:layout_gravity="center" />

    <TextView
        android:id="@+id/ccredits1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginTop="15dp"
        android:paddingTop="30sp"
        android:text="@string/credits"
        android:textAlignment="center"
        android:textColor="@color/dark"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/ccredits11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:padding="35dp"
        android:text="@string/credits1"
        android:textAlignment="center"
        android:textColor="@color/dark"
        android:textSize="30sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/ccredits111"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginBottom="15dp"
        android:paddingTop="20dp"
        android:text="@string/credits2"
        android:textAlignment="center"
        android:textColor="@color/dark"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_ios_share_24"
        android:background="@drawable/custom_circle"
        android:minWidth="40dp"
        android:maxWidth="40dp"
        android:minHeight="40dp"
        android:id="@+id/shareButton"
        android:layout_gravity="center"
        android:maxHeight="40dp"
         />

</LinearLayout>